--- a/src/common/basic.css
+++ b/src/common/basic.css
@@ -44,7 +44,7 @@ a{
 	background: #fff;
 }
 .ocolor{
-	color: #FF8000;
+	color: #FF5000;
 }
 .bgf5{
 	background: #f5f5f5;
@@ -111,22 +111,111 @@ a{
 	width: 100%;
 	min-height: 100%;
 }
-.nav-placeholder{
-	width: 100%;
-	height: 44px;
-}
-.bottomnav-placeholder{
-	width: 100%;
-	height: 45px;
-}
-.content-app{
-	width: 100%;
-	height: calc(100% - 50px);
-}
-.content-navapp{
-	width: 100%;
-	height: calc(100% - 100px);
-}
 .width-auto{
 	width: auto !important;
+}
+/* 搜索列表页 */
+.search-content{
+	padding: 0 10px;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+}
+.search-content-box{
+	width: calc(50% - 5px);
+	margin-bottom: 10px;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+}
+.search-content-img,.search-content-info{
+	width: 100%;
+}
+.search-content-img .img{
+	width: 100%;
+	height: 100%;
+	border-radius: 5px 5px 0 0;
+}
+.search-content-info{
+	background: #fff;
+	padding: 10px;
+	border-radius: 0 0 5px 5px;
+}
+.search-content-info .title{
+	height: 26px;
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+}
+.search-content-info .type{
+	color: #FF5000;
+	height: 16px;
+	font-size: 12px;
+	background: #FFF4EB;
+	display: inline-block;
+	margin-bottom: 5px;
+}
+.search-content-info .price{
+	font-size: 12px;
+	color: #FF5000;
+}
+.search-content-info .price .number{
+	font-size: 16px;
+}
+.search-content-info .info{
+	color: #999;
+	height: 16px;
+	font-size: 12px;
+	background: #F4F4F4;
+	display: inline-block;
+	position: relative;
+	top: 3px;
+}
+.search-content-info .label{
+	height: 18px;
+	font-size: 10px;
+	padding-top: 2px;
+	overflow: hidden;
+	margin-bottom: 2px;
+	display: none;
+}
+.search-content-info .label .txt{
+	color: #999;
+	border: 1px solid #ddd;
+    padding: 1px 2px;
+    margin-right: 5px;
+    border-radius: 2px;
+}
+.search-content-more .search-content-box{
+	width: 100%;
+}
+.search-content-more .search-content-img{
+	width: 125px;
+	height: 125px;
+}
+.search-content-more .search-content-img .img{
+	border-radius: 5px 0 0 5px;
+}
+.search-content-more .search-content-info{
+	width: calc(100% - 125px);
+	border-radius: 0 5px 5px 0;
+}
+.search-content-more .search-content-info .title{
+	position: relative;
+	flex-direction: column;
+	align-content: flex-start;
+	flex-shrink: 0;
+	font-size: 14px;
+	height:36px;
+	line-height: 18px;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	display: -webkit-box;
+	-webkit-box-orient: vertical;
+	-webkit-line-clamp: 2;
+	white-space: normal;
+	margin-bottom: 5px;
+}
+.search-content-more .search-content-info .label{
+	display: block;
 }
