--- a/src/common/basic.css
+++ b/src/common/basic.css
@@ -109,6 +109,9 @@ a{
 .font-size18{
 	font-size: 18px;
 }
+.font-bold{
+	font-weight: bold;
+}
 .flex{
 	display: flex;
 	justify-content: space-between;
@@ -426,4 +429,54 @@ a{
 }
 .discuss .disucss-con-info-more .discuss-con-info-morebox{
 	margin: 5px 0;
+}
+
+/*  */
+.faqs-list{
+	padding: 0 12px;
+}
+.faqs-list .faqs-list-box{
+	padding: 24px 0 12px 0;
+	border-bottom: 1px solid #E5E5E5;
+}
+.faqs-list-box-title{
+	font-weight: bold;
+	color: #333;
+	font-size: 16px;
+}
+.faqs-list-box-con{
+	width: 100%;
+	height: 66px;
+	display: flex;
+	margin: 12px 0;
+}
+.faqs-list-box-con .info{
+	font-size: 14px;
+	height: 66px;
+	line-height: 22px;
+	color: #5C5F66;
+}
+.faqs-list-box-con .info .info-con{
+	overflow: hidden;
+	position: relative;
+	flex-direction: column;
+	align-content: flex-start;
+	flex-shrink: 0;
+	text-overflow: ellipsis;
+	display: -webkit-box;
+	-webkit-box-orient: vertical;
+	-webkit-line-clamp: 3;
+}
+.faqs-list-box .quality{
+	background: #F9E6AC;
+	color: #976A53;
+	font-size: 12px;
+	margin-right: 8px;
+	border-radius: 3px;
+	padding: 1px 3px;
+}
+.faqs-list-box-addr{
+	background: #F7F8FA;
+	padding: 4px 6px;
+	border-radius: 3px;
 }
