--- a/src/common/basic.css
+++ b/src/common/basic.css
@@ -27,6 +27,9 @@ page {
 .text-center{
 	text-align: center;
 }
+.text-right{
+	text-align: right;
+}
 a{
 	text-decoration: none;
 	cursor: pointer;
@@ -543,4 +546,50 @@ a{
 .bottom-nav-auto .bottom-nav-btn:nth-of-type(1){
 	background: #FF9D02;
 	border-radius: 50px 0 0 50px;
+}
+/* 订单 */
+.order-box{
+	background: #fff;
+	border-radius: 10px;
+	padding: 12px;
+	margin-bottom: 8px;
+}
+.order-box .order-img{
+	width: 90px;
+	height: 90px;
+}
+.order-box .order-text{
+	width: calc(100% - 185px);
+	margin-left: 8px;
+	height: 54px;
+	line-height: 18px;
+	color: #333;
+	overflow: hidden;
+	position: relative;
+	flex-direction: column;
+	align-content: flex-start;
+	flex-shrink: 0;
+	text-overflow: ellipsis;
+	display: -webkit-box;
+	-webkit-box-orient: vertical;
+	-webkit-line-clamp: 3;
+}
+.order-box .order-price{
+	width: 80px;
+	text-align: right;
+}
+.order-box .price{
+	color: #333;
+	font-size: 12px;
+}
+.order-box .btn{
+	border: 1px solid #d7d7d7;
+	display: inline-block;
+	padding: 3px 20px;
+	border-radius: 20px;
+	margin-left: 10px;
+}
+.order-box .btn.active{
+	color: #FF5000;
+	border: 1px solid #FF5000;
 }
